--- a/web2.html
+++ b/web2.html
@@ -39,7 +39,7 @@
           </tr>
           </table>
           <br>
-          <a href="web1.html" >a.html</a>
+          <a href="index.html" >a.html</a>
           <a href="web3.html" style="float: right">efg.html</a>
      </div>     
 </body>
