--- a/web3.html
+++ b/web3.html
@@ -84,7 +84,7 @@
           </ol>
         </p>
           <a href="web2.html">abc.html</a>
-          <a href="web1.html" style="float: right">a.html</a>
+          <a href="index.html" style="float: right">a.html</a>
     
   </body>
 </html>
